Updated HTML documentation for Python katas.

--- a/python/katas/_modules/codewars/buddy_pairs.html
+++ b/python/katas/_modules/codewars/buddy_pairs.html
@@ -272,7 +272,7 @@
         <span class="k">if</span> <span class="n">sum_1</span> <span class="o">-</span> <span class="mi">1</span> <span class="o">&gt;</span> <span class="n">num</span><span class="p">:</span>
             <span class="n">sum_2</span> <span class="o">=</span> <span class="n">sum_divisors</span><span class="p">(</span><span class="n">sum_1</span> <span class="o">-</span> <span class="mi">1</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">sum_2</span> <span class="o">-</span> <span class="mi">1</span> <span class="o">==</span> <span class="n">num</span><span class="p">:</span>
-                <span class="k">return</span> <span class="nb">list</span><span class="p">((</span><span class="n">sum_2</span> <span class="o">-</span> <span class="mi">1</span><span class="p">,</span> <span class="n">sum_1</span> <span class="o">-</span> <span class="mi">1</span><span class="p">))</span>
+                <span class="k">return</span> <span class="p">[</span><span class="n">sum_2</span> <span class="o">-</span> <span class="mi">1</span><span class="p">,</span> <span class="n">sum_1</span> <span class="o">-</span> <span class="mi">1</span><span class="p">]</span>
     <span class="k">return</span> <span class="s2">&quot;Nothing&quot;</span></div>
 
 
