--- a/python/katas/_modules/codewars/happy_birthday.html
+++ b/python/katas/_modules/codewars/happy_birthday.html
@@ -256,10 +256,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.happy_birthday.wrap">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">wrap</span><span class="p">(</span><span class="n">height</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">width</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">length</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function finds the total length in centimeters of a ribbon that is used to decorate a box.</span>
-<span class="sd">    The ribbon is crossed on the side of the box with the largest area. On the other side, which</span>
-<span class="sd">    has the same area as the side with the largest area, the ribbon is bound to create a bow, which</span>
-<span class="sd">    is 20 centimeters long.</span>
+<span class="sd">    This function finds the total length in centimeters of a ribbon that is</span>
+<span class="sd">    used to decorate a box. The ribbon is crossed on the side of the box with</span>
+<span class="sd">    the largest area. On the other side, which has the same area as the side</span>
+<span class="sd">    with the largest area, the ribbon is bound to create a bow, which is 20</span>
+<span class="sd">    centimeters long.</span>
 
 <span class="sd">    :param height: The height in centimeters of the box</span>
 <span class="sd">    :param width: The width in centimeters of the box</span>
