--- a/python/katas/_modules/codewars/how_old_will_i_be_in_2099.html
+++ b/python/katas/_modules/codewars/how_old_will_i_be_in_2099.html
@@ -256,9 +256,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.how_old_will_i_be_in_2099.calculate_age">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">calculate_age</span><span class="p">(</span><span class="n">year_of_birth</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">current_year</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns Philip&#39;s age given his birth year and the current year (if the current</span>
-<span class="sd">    year is greater than his birth year) or the number of years until he would be born (if his</span>
-<span class="sd">    birth year is greater than the current year). If both years are the same, the string</span>
+<span class="sd">    This function returns Philip&#39;s age given his birth year and the current</span>
+<span class="sd">    year (if the current year is greater than his birth year) or the number of</span>
+<span class="sd">    years until he would be born (if his birth year is greater than the current</span>
+<span class="sd">    year). If both years are the same, the string</span>
 <span class="sd">    &quot;You were born this very year!&quot; is returned.</span>
 
 <span class="sd">    :param year_of_birth: Philip&#39;s birth year</span>
