--- a/python/katas/_modules/codewars/human_readable_duration_format.html
+++ b/python/katas/_modules/codewars/human_readable_duration_format.html
@@ -256,9 +256,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.human_readable_duration_format.format_duration">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">format_duration</span><span class="p">(</span><span class="n">seconds</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts the time duration :attr:`seconds` into a human-readable format. For</span>
-<span class="sd">    example, given 31546921, this function will return &quot;1 year, 3 hours, 2 minutes and 1 second&quot;. If</span>
-<span class="sd">    :attr:`seconds` is zero, &quot;now&quot; is returned.</span>
+<span class="sd">    This function converts the time duration :attr:`seconds` into a</span>
+<span class="sd">    human-readable format. For example, given 31546921, this function will</span>
+<span class="sd">    return &quot;1 year, 3 hours, 2 minutes and 1 second&quot;. If :attr:`seconds` is</span>
+<span class="sd">    zero, &quot;now&quot; is returned.</span>
 
 <span class="sd">    :param seconds: The input integer representing the number of seconds</span>
 <span class="sd">    :return: The duration in a human-readable format</span>
