--- a/python/katas/_modules/codewars/inside_out_strings.html
+++ b/python/katas/_modules/codewars/inside_out_strings.html
@@ -256,11 +256,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.inside_out_strings.inside_out">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">inside_out</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function turns each word in the given string inside out by reversing all characters in the</span>
-<span class="sd">    word up to the midpoint or middle character (if the word has an odd number of characters). For</span>
-<span class="sd">    example, &quot;taxi&quot; and &quot;taxis&quot; will become &quot;atix&quot; and &quot;atxsi&quot;, respectively.</span>
+<span class="sd">    This function turns each word in the given string inside out by reversing</span>
+<span class="sd">    all characters in the word up to the midpoint or middle character (if the</span>
+<span class="sd">    word has an odd number of characters). For example, &quot;taxi&quot; and &quot;taxis&quot; will</span>
+<span class="sd">    become &quot;atix&quot; and &quot;atxsi&quot;, respectively.</span>
 
-<span class="sd">    :param string: The input string containing words separated by space character(s)</span>
+<span class="sd">    :param string: The input string containing words separated by space</span>
+<span class="sd">        character(s)</span>
 <span class="sd">    :return: A string with each word separated by a space and turned inside out</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">arr</span> <span class="o">=</span> <span class="p">[]</span>
