--- a/python/katas/_modules/codewars/integer_difference.html
+++ b/python/katas/_modules/codewars/integer_difference.html
@@ -256,8 +256,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.integer_difference.int_diff">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">int_diff</span><span class="p">(</span><span class="n">arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">],</span> <span class="n">diff</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function counts all the pairs of integers in the given list that have a difference equal to</span>
-<span class="sd">    :attr:`diff`.</span>
+<span class="sd">    This function counts all the pairs of integers in the given list that have</span>
+<span class="sd">    a difference equal to :attr:`diff`.</span>
 
 <span class="sd">    :param arr: The input list of integers</span>
 <span class="sd">    :param diff: The difference</span>
