--- a/python/katas/_modules/codewars/international_morse_code_encryption.html
+++ b/python/katas/_modules/codewars/international_morse_code_encryption.html
@@ -297,7 +297,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.international_morse_code_encryption.encryption">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">encryption</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function takes a string and returns an encrypted string. The string is encrypted using Morse Code.</span>
+<span class="sd">    This function takes a string and returns an encrypted string. The string is</span>
+<span class="sd">    encrypted using Morse Code.</span>
 
 <span class="sd">    :param string: The string to encrypt.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
