--- a/python/katas/_modules/coderbyte/alphabet_soup.html
+++ b/python/katas/_modules/coderbyte/alphabet_soup.html
@@ -262,7 +262,7 @@
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: The characters in :attr:`string` in sorted order</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">sorted</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">string</span><span class="p">)))</span></div>
+    <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">sorted</span><span class="p">(</span><span class="n">string</span><span class="p">))</span></div>
 
 </pre></div>
         </article>
