--- a/python/katas/_modules/coderbyte/permutation_step.html
+++ b/python/katas/_modules/coderbyte/permutation_step.html
@@ -266,20 +266,9 @@
 <span class="sd">    :return: The next number greater than :attr:`integer` using all the digits</span>
 <span class="sd">        in :attr:`integer`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">arr</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span>
-        <span class="nb">list</span><span class="p">(</span>
-            <span class="nb">set</span><span class="p">(</span>
-                <span class="nb">map</span><span class="p">(</span>
-                    <span class="nb">int</span><span class="p">,</span>
-                    <span class="p">[</span>
-                        <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">permutation</span><span class="p">)</span>
-                        <span class="k">for</span> <span class="n">permutation</span> <span class="ow">in</span> <span class="n">permutations</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">integer</span><span class="p">))</span>
-                    <span class="p">],</span>
-                <span class="p">)</span>
-            <span class="p">)</span>
-        <span class="p">)</span>
-    <span class="p">)</span>
-    <span class="k">return</span> <span class="n">arr</span><span class="p">[</span><span class="n">arr</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">integer</span><span class="p">)</span> <span class="o">+</span> <span class="mi">1</span><span class="p">]</span> <span class="k">if</span> <span class="n">integer</span> <span class="o">!=</span> <span class="n">arr</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="k">else</span> <span class="o">-</span><span class="mi">1</span></div>
+    <span class="n">list_of_permutations</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">p</span><span class="p">)</span> <span class="k">for</span> <span class="n">p</span> <span class="ow">in</span> <span class="n">permutations</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">integer</span><span class="p">))]</span>
+    <span class="n">lst</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="nb">set</span><span class="p">(</span><span class="nb">map</span><span class="p">(</span><span class="nb">int</span><span class="p">,</span> <span class="n">list_of_permutations</span><span class="p">)))</span>
+    <span class="k">return</span> <span class="n">lst</span><span class="p">[</span><span class="n">lst</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">integer</span><span class="p">)</span> <span class="o">+</span> <span class="mi">1</span><span class="p">]</span> <span class="k">if</span> <span class="n">integer</span> <span class="o">!=</span> <span class="n">lst</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="k">else</span> <span class="o">-</span><span class="mi">1</span></div>
 
 </pre></div>
         </article>
