--- a/python/katas/_modules/coderbyte/third_greatest.html
+++ b/python/katas/_modules/coderbyte/third_greatest.html
@@ -270,7 +270,7 @@
             <span class="n">lengths</span><span class="p">[</span><span class="n">size</span><span class="p">]</span> <span class="o">=</span> <span class="p">[</span><span class="n">string</span><span class="p">]</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">lengths</span><span class="p">[</span><span class="n">size</span><span class="p">]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">string</span><span class="p">)</span>
-    <span class="n">lengths</span> <span class="o">=</span> <span class="n">OrderedDict</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="nb">sorted</span><span class="p">(</span><span class="n">lengths</span><span class="o">.</span><span class="n">items</span><span class="p">())))</span>
+    <span class="n">lengths</span> <span class="o">=</span> <span class="n">OrderedDict</span><span class="p">(</span><span class="nb">sorted</span><span class="p">(</span><span class="n">lengths</span><span class="o">.</span><span class="n">items</span><span class="p">(),</span> <span class="n">reverse</span><span class="o">=</span><span class="kc">True</span><span class="p">))</span>
     <span class="n">count</span> <span class="o">=</span> <span class="mi">1</span>
     <span class="n">third_longest_word</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="k">for</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">lengths</span><span class="o">.</span><span class="n">values</span><span class="p">():</span>
