--- a/python/katas/_modules/coderbyte/tree_constructor.html
+++ b/python/katas/_modules/coderbyte/tree_constructor.html
@@ -288,7 +288,7 @@
             <span class="n">parents</span><span class="p">[</span><span class="n">child_node</span><span class="p">[</span><span class="mi">0</span><span class="p">]]</span> <span class="o">=</span> <span class="n">parent</span>
 
     <span class="n">root_count</span> <span class="o">=</span> <span class="mi">0</span>
-    <span class="k">for</span> <span class="n">parent</span><span class="p">,</span> <span class="n">_</span> <span class="ow">in</span> <span class="n">children</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+    <span class="k">for</span> <span class="n">parent</span> <span class="ow">in</span> <span class="n">children</span><span class="p">:</span>
         <span class="k">if</span> <span class="n">parent</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">parents</span><span class="p">:</span>
             <span class="n">root_count</span> <span class="o">+=</span> <span class="mi">1</span>
 
