--- a/python/katas/_modules/coderbyte/two_sum.html
+++ b/python/katas/_modules/coderbyte/two_sum.html
@@ -268,7 +268,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">values</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="n">results</span> <span class="o">=</span> <span class="p">[]</span>
-    <span class="k">for</span> <span class="n">tup</span> <span class="ow">in</span> <span class="nb">list</span><span class="p">(</span><span class="n">permutations</span><span class="p">(</span><span class="n">integers</span><span class="p">[</span><span class="mi">1</span><span class="p">:],</span> <span class="mi">2</span><span class="p">)):</span>
+    <span class="k">for</span> <span class="n">tup</span> <span class="ow">in</span> <span class="n">permutations</span><span class="p">(</span><span class="n">integers</span><span class="p">[</span><span class="mi">1</span><span class="p">:],</span> <span class="mi">2</span><span class="p">):</span>
         <span class="k">if</span> <span class="p">(</span>
             <span class="n">tup</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">+</span> <span class="n">tup</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">==</span> <span class="n">integers</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
             <span class="ow">and</span> <span class="n">tup</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">values</span>
