--- a/python/katas/_modules/codesignal/fare_estimator.html
+++ b/python/katas/_modules/codesignal/fare_estimator.html
@@ -273,7 +273,7 @@
         <span class="n">ride_time</span> <span class="o">*</span> <span class="n">cost</span> <span class="o">+</span> <span class="n">ride_distance</span> <span class="o">*</span> <span class="n">cost_per_mile</span><span class="p">[</span><span class="n">idx</span><span class="p">]</span>
         <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">cost</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">cost_per_minute</span><span class="p">)</span>
     <span class="p">]</span>
-    <span class="k">return</span> <span class="nb">list</span><span class="p">(</span><span class="nb">map</span><span class="p">(</span><span class="k">lambda</span> <span class="n">result</span><span class="p">:</span> <span class="nb">float</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">result</span><span class="si">:</span><span class="s2">.2f</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">),</span> <span class="n">results</span><span class="p">))</span></div>
+    <span class="k">return</span> <span class="p">[</span><span class="nb">float</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">result</span><span class="si">:</span><span class="s2">.2f</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="k">for</span> <span class="n">result</span> <span class="ow">in</span> <span class="n">results</span><span class="p">]</span></div>
 
 </pre></div>
         </article>
