--- a/python/katas/_modules/codewars/arrh_grabscrab.html
+++ b/python/katas/_modules/codewars/arrh_grabscrab.html
@@ -265,10 +265,10 @@
 <span class="sd">    :return: A list of possible words that the pirate might have meant using</span>
 <span class="sd">        all the letters in :attr:`word`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">word</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">word</span><span class="p">))</span>
+    <span class="n">word</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">word</span><span class="p">)</span>
     <span class="n">matches</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">for</span> <span class="n">match</span> <span class="ow">in</span> <span class="n">possible_words</span><span class="p">:</span>
-        <span class="n">temp</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">match</span><span class="p">))</span>
+        <span class="n">temp</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">match</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">word</span> <span class="o">==</span> <span class="n">temp</span><span class="p">:</span>
             <span class="n">matches</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">match</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">matches</span></div>
