--- a/python/katas/_modules/codewars/battle_of_the_characters_easy.html
+++ b/python/katas/_modules/codewars/battle_of_the_characters_easy.html
@@ -269,7 +269,9 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">sum_1</span> <span class="o">=</span> <span class="nb">sum</span><span class="p">(</span><span class="n">upper</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">letter</span><span class="p">)</span> <span class="o">+</span> <span class="mi">1</span> <span class="k">for</span> <span class="n">letter</span> <span class="ow">in</span> <span class="n">group_1</span><span class="p">)</span>
     <span class="n">sum_2</span> <span class="o">=</span> <span class="nb">sum</span><span class="p">(</span><span class="n">upper</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">letter</span><span class="p">)</span> <span class="o">+</span> <span class="mi">1</span> <span class="k">for</span> <span class="n">letter</span> <span class="ow">in</span> <span class="n">group_2</span><span class="p">)</span>
-    <span class="k">return</span> <span class="n">group_1</span> <span class="k">if</span> <span class="n">sum_1</span> <span class="o">&gt;</span> <span class="n">sum_2</span> <span class="k">else</span> <span class="n">group_2</span> <span class="k">if</span> <span class="n">sum_2</span> <span class="o">&gt;</span> <span class="n">sum_1</span> <span class="k">else</span> <span class="s2">&quot;Tie!&quot;</span></div>
+    <span class="k">if</span> <span class="n">sum_1</span> <span class="o">==</span> <span class="n">sum_2</span><span class="p">:</span>
+        <span class="k">return</span> <span class="s2">&quot;Tie!&quot;</span>
+    <span class="k">return</span> <span class="n">group_1</span> <span class="k">if</span> <span class="n">sum_1</span> <span class="o">&gt;</span> <span class="n">sum_2</span> <span class="k">else</span> <span class="n">group_2</span></div>
 
 </pre></div>
         </article>
