--- a/python/katas/_modules/codewars/calculate_variance.html
+++ b/python/katas/_modules/codewars/calculate_variance.html
@@ -266,7 +266,7 @@
 <span class="sd">    :return: The variance for :attr:`numbers`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">average</span> <span class="o">=</span> <span class="n">mean</span><span class="p">(</span><span class="n">numbers</span><span class="p">)</span>
-    <span class="k">return</span> <span class="nb">sum</span><span class="p">(</span><span class="nb">map</span><span class="p">(</span><span class="k">lambda</span> <span class="n">number</span><span class="p">:</span> <span class="p">(</span><span class="n">number</span> <span class="o">-</span> <span class="n">average</span><span class="p">)</span> <span class="o">**</span> <span class="mi">2</span><span class="p">,</span> <span class="n">numbers</span><span class="p">))</span> <span class="o">/</span> <span class="nb">len</span><span class="p">(</span><span class="n">numbers</span><span class="p">)</span></div>
+    <span class="k">return</span> <span class="nb">sum</span><span class="p">([(</span><span class="n">number</span> <span class="o">-</span> <span class="n">average</span><span class="p">)</span> <span class="o">**</span> <span class="mi">2</span> <span class="k">for</span> <span class="n">number</span> <span class="ow">in</span> <span class="n">numbers</span><span class="p">])</span> <span class="o">/</span> <span class="nb">len</span><span class="p">(</span><span class="n">numbers</span><span class="p">)</span></div>
 
 </pre></div>
         </article>
