--- a/python/katas/_modules/codewars/ensure_question.html
+++ b/python/katas/_modules/codewars/ensure_question.html
@@ -262,7 +262,9 @@
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: A string that contains a question mark at the end of it</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="s2">&quot;?&quot;</span> <span class="k">if</span> <span class="ow">not</span> <span class="n">string</span> <span class="k">else</span> <span class="n">string</span> <span class="k">if</span> <span class="n">string</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;?&quot;</span> <span class="k">else</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">string</span><span class="si">}</span><span class="s2">?&quot;</span></div>
+    <span class="k">if</span> <span class="ow">not</span> <span class="n">string</span><span class="p">:</span>
+        <span class="k">return</span> <span class="s2">&quot;?&quot;</span>
+    <span class="k">return</span> <span class="n">string</span> <span class="k">if</span> <span class="n">string</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;?&quot;</span> <span class="k">else</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">string</span><span class="si">}</span><span class="s2">?&quot;</span></div>
 
 </pre></div>
         </article>
