--- a/python/katas/_modules/codewars/human_readable_time.html
+++ b/python/katas/_modules/codewars/human_readable_time.html
@@ -256,8 +256,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.human_readable_time.make_readable">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">make_readable</span><span class="p">(</span><span class="n">seconds</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts the given seconds into a human-readable format, namely &quot;##:##:##&quot;, which</span>
-<span class="sd">    represents hours, minutes, and seconds.</span>
+<span class="sd">    This function converts the given seconds into a human-readable format,</span>
+<span class="sd">    namely &quot;##:##:##&quot;, which represents hours, minutes, and seconds.</span>
 
 <span class="sd">    :param seconds: The input integer representing the number of seconds</span>
 <span class="sd">    :return: A human-readable string in the ##:##:## format</span>
