--- a/python/katas/_modules/codewars/indexed_capitalization.html
+++ b/python/katas/_modules/codewars/indexed_capitalization.html
@@ -256,11 +256,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.indexed_capitalization.capitalize">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">capitalize</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">indexes</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function capitalizes the characters in the given string if the index of the character is in</span>
-<span class="sd">    the given list.</span>
+<span class="sd">    This function capitalizes the characters in the given string if the index</span>
+<span class="sd">    of the character is in the given list.</span>
 
 <span class="sd">    :param string: The input string</span>
-<span class="sd">    :param indexes: The input list of integers representing indexes in the string</span>
+<span class="sd">    :param indexes: The input list of integers representing indexes in the</span>
+<span class="sd">        string</span>
 <span class="sd">    :return: A string that may or may not have capitalized letters</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span>
