--- a/python/katas/_modules/codewars/int32_to_ipv4.html
+++ b/python/katas/_modules/codewars/int32_to_ipv4.html
@@ -256,7 +256,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.int32_to_ipv4.int32_to_ip">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">int32_to_ip</span><span class="p">(</span><span class="n">int32</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts the given 32-bit integer to an IP version 4 address string.</span>
+<span class="sd">    This function converts the given 32-bit integer to an IP version 4 address</span>
+<span class="sd">    string.</span>
 
 <span class="sd">    :param int32: The input integer</span>
 <span class="sd">    :return: An IP version 4 address</span>
