--- a/python/katas/_modules/codewars/invert_the_triangle.html
+++ b/python/katas/_modules/codewars/invert_the_triangle.html
@@ -256,8 +256,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.invert_the_triangle.invert_triangle">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">invert_triangle</span><span class="p">(</span><span class="n">triangle</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function inverts the given triangle, which is represented as a string, and then replaces</span>
-<span class="sd">    each space character with a pound sign, and vice versa.</span>
+<span class="sd">    This function inverts the given triangle, which is represented as a string,</span>
+<span class="sd">    and then replaces each space character with a pound sign, and vice versa.</span>
 
 <span class="sd">    :param triangle: A newline-delimited string that represents a triangle</span>
 <span class="sd">    :return: An inverted triangle</span>
@@ -265,7 +265,7 @@
     <span class="n">inverted</span> <span class="o">=</span> <span class="nb">reversed</span><span class="p">(</span><span class="n">triangle</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">))</span>
     <span class="n">result</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">for</span> <span class="n">line</span> <span class="ow">in</span> <span class="n">inverted</span><span class="p">:</span>
-        <span class="n">result</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="s2">&quot;#&quot;</span> <span class="k">if</span> <span class="n">character</span> <span class="o">==</span> <span class="s2">&quot; &quot;</span> <span class="k">else</span> <span class="s2">&quot; &quot;</span> <span class="k">for</span> <span class="n">character</span> <span class="ow">in</span> <span class="n">line</span><span class="p">]))</span>
+        <span class="n">result</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="s2">&quot;#&quot;</span> <span class="k">if</span> <span class="n">char</span> <span class="o">==</span> <span class="s2">&quot; &quot;</span> <span class="k">else</span> <span class="s2">&quot; &quot;</span> <span class="k">for</span> <span class="n">char</span> <span class="ow">in</span> <span class="n">line</span><span class="p">]))</span>
     <span class="k">return</span> <span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">result</span><span class="p">)</span></div>
 
 </pre></div>
