--- a/python/katas/_modules/codewars/iq.html
+++ b/python/katas/_modules/codewars/iq.html
@@ -256,12 +256,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.iq.iq_test">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">iq_test</span><span class="p">(</span><span class="n">numbers</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the index (1-based) of the number that is not like all the other numbers.</span>
-<span class="sd">    For example, given &quot;2 4 7 8 10&quot;, this function will return 3 because the third number is odd</span>
-<span class="sd">    while the others are even, and given &quot;11 13 15 16 17&quot;, this function will return 4 because the</span>
-<span class="sd">    fourth number is even while the others are odd.</span>
+<span class="sd">    This function returns the index (1-based) of the number that is not like</span>
+<span class="sd">    all the other numbers. For example, given &quot;2 4 7 8 10&quot;, this function will</span>
+<span class="sd">    return 3 because the third number is odd while the others are even, and</span>
+<span class="sd">    given &quot;11 13 15 16 17&quot;, this function will return 4 because the fourth</span>
+<span class="sd">    number is even while the others are odd.</span>
 
-<span class="sd">    :param numbers: The input string representing a space-delimited list of numbers</span>
+<span class="sd">    :param numbers: The input string representing a space-delimited list of</span>
+<span class="sd">        numbers</span>
 <span class="sd">    :return: The index (1-based) of the number that is either odd or even</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">odd</span> <span class="o">=</span> <span class="p">[]</span>
