--- a/python/katas/_modules/codewars/isbn_10_validation.html
+++ b/python/katas/_modules/codewars/isbn_10_validation.html
@@ -256,11 +256,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.isbn_10_validation.valid_isbn10">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">valid_isbn10</span><span class="p">(</span><span class="n">isbn</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function validates an ISBN 10 identifier, which is ten digits long. The first nine</span>
-<span class="sd">    characters are digits 0-9. The last digit can be 0-9 or X whose value is 10.</span>
+<span class="sd">    This function validates an ISBN 10 identifier, which is ten digits long.</span>
+<span class="sd">    The first nine characters are digits 0-9. The last digit can be 0-9 or X</span>
+<span class="sd">    whose value is 10.</span>
 
-<span class="sd">    An ISBN 10 identifier is valid if the sum of the digits multiplied by their position (starting</span>
-<span class="sd">    with 1) modulo 11 equals zero.</span>
+<span class="sd">    An ISBN 10 identifier is valid if the sum of the digits multiplied by their</span>
+<span class="sd">    position (starting with 1) modulo 11 equals zero.</span>
 
 <span class="sd">    :param isbn: The input string, the ISBN 10 identifier to validate</span>
 <span class="sd">    :return: True if the ISBN 10 identifier is valid, False otherwise</span>
@@ -270,7 +271,7 @@
     <span class="k">if</span> <span class="s2">&quot;X&quot;</span> <span class="ow">in</span> <span class="n">isbn</span> <span class="ow">and</span> <span class="n">isbn</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span> <span class="o">!=</span> <span class="s2">&quot;X&quot;</span><span class="p">:</span>
         <span class="k">return</span> <span class="kc">False</span>
     <span class="k">try</span><span class="p">:</span>
-        <span class="n">values</span> <span class="o">=</span> <span class="p">[</span><span class="nb">int</span><span class="p">(</span><span class="n">value</span><span class="p">)</span> <span class="o">*</span> <span class="p">(</span><span class="n">idx</span> <span class="o">+</span> <span class="mi">1</span><span class="p">)</span> <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">isbn</span><span class="p">[:</span><span class="o">-</span><span class="mi">1</span><span class="p">])]</span>
+        <span class="n">values</span> <span class="o">=</span> <span class="p">[</span><span class="nb">int</span><span class="p">(</span><span class="n">val</span><span class="p">)</span> <span class="o">*</span> <span class="p">(</span><span class="n">idx</span> <span class="o">+</span> <span class="mi">1</span><span class="p">)</span> <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">val</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">isbn</span><span class="p">[:</span><span class="o">-</span><span class="mi">1</span><span class="p">])]</span>
     <span class="k">except</span> <span class="ne">ValueError</span><span class="p">:</span>
         <span class="k">return</span> <span class="kc">False</span>
     <span class="k">if</span> <span class="s2">&quot;X&quot;</span> <span class="ow">in</span> <span class="n">isbn</span><span class="p">:</span>
