--- a/python/katas/_modules/codewars/largest_elements.html
+++ b/python/katas/_modules/codewars/largest_elements.html
@@ -263,7 +263,7 @@
 <span class="sd">    :param numbers: The input list of integers</span>
 <span class="sd">    :return: The top N integers in :attr:`numbers`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="nb">list</span><span class="p">(</span><span class="nb">sorted</span><span class="p">(</span><span class="n">numbers</span><span class="p">))[</span><span class="o">-</span><span class="n">top_n</span><span class="p">:]</span></div>
+    <span class="k">return</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">numbers</span><span class="p">)[</span><span class="o">-</span><span class="n">top_n</span><span class="p">:]</span></div>
 
 </pre></div>
         </article>
