--- a/python/katas/_modules/codewars/merge_two_sorted_arrays_into_one.html
+++ b/python/katas/_modules/codewars/merge_two_sorted_arrays_into_one.html
@@ -266,7 +266,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">new_arr</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">arr1</span><span class="p">)</span>
     <span class="n">new_arr</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">arr2</span><span class="p">)</span>
-    <span class="k">return</span> <span class="nb">sorted</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">new_arr</span><span class="p">))</span></div>
+    <span class="k">return</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">new_arr</span><span class="p">)</span></div>
 
 </pre></div>
         </article>
