--- a/python/katas/_modules/codewars/next_bigger_number_with_the_same_digits.html
+++ b/python/katas/_modules/codewars/next_bigger_number_with_the_same_digits.html
@@ -265,7 +265,7 @@
 <span class="sd">    :return: The next number that is bigger than :attr:`integer` using only the digits in</span>
 <span class="sd">        :attr:`integer`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">if</span> <span class="nb">str</span><span class="p">(</span><span class="n">integer</span><span class="p">)</span> <span class="o">==</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="nb">sorted</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">integer</span><span class="p">)))):</span>
+    <span class="k">if</span> <span class="nb">str</span><span class="p">(</span><span class="n">integer</span><span class="p">)</span> <span class="o">==</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">sorted</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">integer</span><span class="p">),</span> <span class="n">reverse</span><span class="o">=</span><span class="kc">True</span><span class="p">)):</span>
         <span class="k">return</span> <span class="o">-</span><span class="mi">1</span>
     <span class="n">string</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">integer</span><span class="p">)))</span>
     <span class="n">temp</span> <span class="o">=</span> <span class="p">[]</span>
