--- a/python/katas/_modules/codewars/santas_naughty_list.html
+++ b/python/katas/_modules/codewars/santas_naughty_list.html
@@ -248,7 +248,7 @@
 <div class="viewcode-block" id="find_children">
 <a class="viewcode-back" href="../../codewars.html#codewars.santas_naughty_list.find_children">[docs]</a>
 <span></span><span class="k">def</span><span class="w"> </span><span class="nf">find_children</span><span class="p">(</span><span class="n">santas_list</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">children</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
-    <span class="k">return</span> <span class="nb">sorted</span><span class="p">(</span><span class="nb">set</span><span class="p">(</span><span class="n">child</span> <span class="k">for</span> <span class="n">child</span> <span class="ow">in</span> <span class="n">children</span> <span class="k">if</span> <span class="n">child</span> <span class="ow">in</span> <span class="n">santas_list</span><span class="p">))</span></div>
+    <span class="k">return</span> <span class="nb">sorted</span><span class="p">({</span><span class="n">child</span> <span class="k">for</span> <span class="n">child</span> <span class="ow">in</span> <span class="n">children</span> <span class="k">if</span> <span class="n">child</span> <span class="ow">in</span> <span class="n">santas_list</span><span class="p">})</span></div>
 
 </pre></div>
         </article>
