--- a/python/katas/_modules/codewars/sum_by_factors.html
+++ b/python/katas/_modules/codewars/sum_by_factors.html
@@ -269,12 +269,12 @@
 <span class="sd">        all the numbers in :attr:`integers` of which the prime number is a</span>
 <span class="sd">        prime factor</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">factors</span> <span class="o">=</span> <span class="p">{</span><span class="n">integer</span><span class="p">:</span> <span class="n">get_prime_factors</span><span class="p">(</span><span class="nb">abs</span><span class="p">(</span><span class="n">integer</span><span class="p">))</span> <span class="k">for</span> <span class="n">integer</span> <span class="ow">in</span> <span class="n">integers</span><span class="p">}</span>
-    <span class="n">all_primes</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">({</span><span class="n">prime</span> <span class="k">for</span> <span class="n">numbers</span> <span class="ow">in</span> <span class="n">factors</span><span class="o">.</span><span class="n">values</span><span class="p">()</span> <span class="k">for</span> <span class="n">prime</span> <span class="ow">in</span> <span class="n">numbers</span><span class="p">})</span>
-    <span class="k">return</span> <span class="p">[</span>
-        <span class="nb">list</span><span class="p">((</span><span class="n">prime</span><span class="p">,</span> <span class="nb">sum</span><span class="p">(</span><span class="n">num</span> <span class="k">for</span> <span class="n">num</span> <span class="ow">in</span> <span class="n">integers</span> <span class="k">if</span> <span class="n">prime</span> <span class="ow">in</span> <span class="n">factors</span><span class="p">[</span><span class="n">num</span><span class="p">])))</span>
-        <span class="k">for</span> <span class="n">prime</span> <span class="ow">in</span> <span class="n">all_primes</span>
-    <span class="p">]</span></div>
+    <span class="n">factors</span> <span class="o">=</span> <span class="p">{</span><span class="n">integer</span><span class="p">:</span> <span class="n">get_prime_factors</span><span class="p">(</span><span class="nb">abs</span><span class="p">(</span><span class="n">integer</span><span class="p">))</span>
+               <span class="k">for</span> <span class="n">integer</span> <span class="ow">in</span> <span class="n">integers</span><span class="p">}</span>
+    <span class="n">all_primes</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">({</span><span class="n">prime</span> <span class="k">for</span> <span class="n">numbers</span> <span class="ow">in</span> <span class="n">factors</span><span class="o">.</span><span class="n">values</span><span class="p">()</span>
+                         <span class="k">for</span> <span class="n">prime</span> <span class="ow">in</span> <span class="n">numbers</span><span class="p">})</span>
+    <span class="k">return</span> <span class="p">[[</span><span class="n">prime</span><span class="p">,</span> <span class="nb">sum</span><span class="p">(</span><span class="n">num</span> <span class="k">for</span> <span class="n">num</span> <span class="ow">in</span> <span class="n">integers</span> <span class="k">if</span> <span class="n">prime</span> <span class="ow">in</span> <span class="n">factors</span><span class="p">[</span><span class="n">num</span><span class="p">])]</span>
+            <span class="k">for</span> <span class="n">prime</span> <span class="ow">in</span> <span class="n">all_primes</span><span class="p">]</span></div>
 
 </pre></div>
         </article>
