--- a/python/katas/_modules/codewars/sum_square_even_root_odd.html
+++ b/python/katas/_modules/codewars/sum_square_even_root_odd.html
@@ -263,7 +263,7 @@
 <span class="sd">    :param nums: The input list of integers</span>
 <span class="sd">    :return: The sum rounded to two decimal places</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="nb">round</span><span class="p">(</span><span class="nb">sum</span><span class="p">(</span><span class="nb">map</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="o">**</span><span class="mi">2</span> <span class="k">if</span> <span class="n">x</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">0</span> <span class="k">else</span> <span class="n">x</span><span class="o">**</span><span class="mf">0.5</span><span class="p">,</span> <span class="n">nums</span><span class="p">)),</span> <span class="mi">2</span><span class="p">)</span></div>
+    <span class="k">return</span> <span class="nb">round</span><span class="p">(</span><span class="nb">sum</span><span class="p">(</span><span class="n">x</span><span class="o">**</span><span class="mi">2</span> <span class="k">if</span> <span class="n">x</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">0</span> <span class="k">else</span> <span class="n">x</span><span class="o">**</span><span class="mf">0.5</span> <span class="k">for</span> <span class="n">x</span> <span class="ow">in</span> <span class="n">nums</span><span class="p">),</span> <span class="mi">2</span><span class="p">)</span></div>
 
 </pre></div>
         </article>
