--- a/python/katas/_modules/codewars/thinkful_list_and_loop_drills_lists_of_lists.html
+++ b/python/katas/_modules/codewars/thinkful_list_and_loop_drills_lists_of_lists.html
@@ -265,8 +265,8 @@
 <span class="sd">    :param data: The input list, which contains lists of integers</span>
 <span class="sd">    :return: The product of all the differences multiplied together</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">func</span> <span class="o">=</span> <span class="k">lambda</span> <span class="n">lst</span><span class="p">:</span> <span class="n">lst</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">-</span> <span class="n">lst</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
-    <span class="k">return</span> <span class="n">reduce</span><span class="p">(</span><span class="k">lambda</span> <span class="n">fst</span><span class="p">,</span> <span class="n">snd</span><span class="p">:</span> <span class="n">fst</span> <span class="o">*</span> <span class="n">snd</span><span class="p">,</span> <span class="nb">map</span><span class="p">(</span><span class="n">func</span><span class="p">,</span> <span class="n">data</span><span class="p">))</span></div>
+    <span class="k">return</span> <span class="n">reduce</span><span class="p">(</span><span class="k">lambda</span> <span class="n">fst</span><span class="p">,</span> <span class="n">snd</span><span class="p">:</span> <span class="n">fst</span> <span class="o">*</span> <span class="n">snd</span><span class="p">,</span>
+                  <span class="p">[</span><span class="n">lst</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">-</span> <span class="n">lst</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="k">for</span> <span class="n">lst</span> <span class="ow">in</span> <span class="n">data</span><span class="p">])</span></div>
 
 </pre></div>
         </article>
