--- a/python/katas/_modules/codewars/thinkful_logic_drills_traffic_light.html
+++ b/python/katas/_modules/codewars/thinkful_logic_drills_traffic_light.html
@@ -264,7 +264,9 @@
 <span class="sd">    :param current: The current light: &quot;red&quot;, &quot;yellow&quot;, or &quot;green&quot;</span>
 <span class="sd">    :return: The light that will appear next</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="s2">&quot;green&quot;</span> <span class="k">if</span> <span class="n">current</span> <span class="o">==</span> <span class="s2">&quot;red&quot;</span> <span class="k">else</span> <span class="s2">&quot;yellow&quot;</span> <span class="k">if</span> <span class="n">current</span> <span class="o">==</span> <span class="s2">&quot;green&quot;</span> <span class="k">else</span> <span class="s2">&quot;red&quot;</span></div>
+    <span class="k">if</span> <span class="n">current</span> <span class="o">==</span> <span class="s2">&quot;red&quot;</span><span class="p">:</span>
+        <span class="k">return</span> <span class="s2">&quot;green&quot;</span>
+    <span class="k">return</span> <span class="s2">&quot;yellow&quot;</span> <span class="k">if</span> <span class="n">current</span> <span class="o">==</span> <span class="s2">&quot;green&quot;</span> <span class="k">else</span> <span class="s2">&quot;red&quot;</span></div>
 
 </pre></div>
         </article>
