--- a/python/katas/genindex.html
+++ b/python/katas/genindex.html
@@ -5913,10 +5913,12 @@
 </li>
         <li><a href="coderbyte.html#coderbyte.blackjack_highest.get_highest_card">get_highest_card() (in module coderbyte.blackjack_highest)</a>
 </li>
-        <li><a href="codewars.html#codewars.naughty_or_nice.get_naughty_names">get_naughty_names() (in module codewars.naughty_or_nice)</a>
+        <li><a href="codewars.html#codewars.rgb_to_hex_conversion.get_int_value">get_int_value() (in module codewars.rgb_to_hex_conversion)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="codewars.html#codewars.naughty_or_nice.get_naughty_names">get_naughty_names() (in module codewars.naughty_or_nice)</a>
+</li>
         <li><a href="codewars.html#codewars.naughty_or_nice.get_nice_names">get_nice_names() (in module codewars.naughty_or_nice)</a>
 </li>
         <li><a href="codewars.html#codewars.linked_lists_get_nth_node.get_nth">get_nth() (in module codewars.linked_lists_get_nth_node)</a>
